# subscrape

./: .gitignore  AUTHORS  LICENSE  PipRequirements.txt  README.md  main.py  pyproject.toml  scrape.py  test.py  transform.py
.github/workflows/: github-actions.yaml
config/: sample_scrape_config.json  sample_transfers_config.json
docs/: architecture.md  configuration.md  moonbeam_scraper.md
src/subscrape/: subscan_wrapper.py
src/subscrape/db/: sectorized_storage_manager.py
src/subscrape/scrapers/: parachain_scraper.py  scrape_config.py
subscrape/: __init__.py  blockscout_wrapper.py  moonscan_wrapper.py  subscan_base.py  subscan_v1.py  subscan_v2.py  subscan_wrapper.py
subscrape/apis/: __init__.py  blockscout_wrapper.py  moonscan_wrapper.py  subscan_base.py  subscan_v1.py  subscan_v2.py  subscan_wrapper.py
subscrape/db/: file_serializer.py  sectorized_storage_manager.py  sqlitedict_wrapper.py  subscrape_db.py
subscrape/decode/: __init__.py  decode_evm_log.py  decode_evm_transaction.py
subscrape/parachains/: __init__.py  parachain.py
subscrape/scrapers/: __init__.py  decode_evm_log.py  decode_evm_transaction.py  moonbeam_scraper.py  parachain_scrape_config.py  parachain_scraper.py  scrape_config.py
tests/: __init__.py  test_db.py  test_events.py  test_events_list.py  test_extrinsic_list.py  test_extrinsics.py  test_extrinsics_list.py  test_hydration.py  test_moonbeam_scraper.py  test_params.py  test_persistence.py  test_transfers.py
