[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subscrape"
version = "1.1"
authors = [
  { name="Tommi Enenkel", email="tommi.enenkel@gmail.com" },
  { name="spaz", email="spazcoin@gmail.com" }
]
description = "A Python scraper for substrate chains"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "eth_utils",
  "flake8",
  "hexbytes",
  "httpx[http2]",
  "openpyxl",
  "pandas",
  "pytest-asyncio",
  "ratelimit",
  "simplejson",
  "sqlalchemy",
  "sqlalchemy-utils",
  "substrate-interface",
  "web3>5.0",
  "xlsxwriter"

]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChaosDAO-org/subscrape"
"Bug Tracker" = "https://github.com/ChaosDAO-org/subscrape/issues"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
